dataset1235/2025-2/805158916/users/3563627350/executions/2651470117_2132966528.log
== SUBMISSION (2025-08-25 14:22:11)
-- CODE: 
nome = input()
nome_maiusculo = nome.upper()
print(nome_maisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:24:08)
-- CODE: 
nome = input()
nome_maiusculo = nome.upper()
print(nome_maiusculo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:23:24)
-- CODE: 
nome = input()
nome_maiusculo = nome.upper()
print(nome_maisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:23:23)
-- CODE: 
nome = input()
nome_maiusculo = nome.upper()
print(nome_maisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:24:07)
-- CODE: 
nome = input()
nome_maiusculo = nome.upper()
print(nome_maiusculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:23:30)
-- CODE: 
nome = input()
nome_maiusculo = nome.upper()
print(nome_maisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:23:00)
-- CODE: 
nome = input()
nome_maiusculo = nome.upper()
print(nome_maisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:23:28)
-- CODE: 
nome = input()
nome_maiusculo = nome.upper()
print(nome_maisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:22:10)
-- CODE: 
nome = input()
nome_maiusculo = nome.upper()
print(nome_maisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(nome_maisculo)
          ^^^^^^^^^^^^^
NameError: name 'nome_maisculo' is not defined. Did you mean: 'nome_maiusculo'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
